Fix button on small screens.  Change out the background image

--- a/public/css/style-xsmall.css
+++ b/public/css/style-xsmall.css
@@ -59,7 +59,6 @@
 	input[type="reset"],
 	input[type="button"],
 	.button {
-		padding: 0;
 	}
 
 /* Banner */
